@@ -50,14 +50,27 @@ class EdgeNodingValidator {
 
 private:
 	std::vector<noding::SegmentString*>& toSegmentStrings(std::vector<Edge*>& edges);
-	noding::NodingValidator nv;
+
+	// Make sure this member is initialized *before*
+	// the NodingValidator, as initialization of
+	// NodingValidator will use toSegmentString(), that
+	// in turn expects this member to be initialized
 	std::vector<noding::SegmentString*> segStr;
+
+	// Make sure this member is initialized *before*
+	// the NodingValidator, as initialization of
+	// NodingValidator will use toSegmentString(), that
+	// in turn expects this member to be initialized
 	std::vector<geom::CoordinateSequence*> newCoordSeq;
+
+	noding::NodingValidator nv;
 
 public:
 
 	EdgeNodingValidator(std::vector<Edge*>& edges)
 		:
+		segStr(), 
+		newCoordSeq(),
 		nv(toSegmentStrings(edges))
 	{}
 
